--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -7,6 +7,7 @@
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='2'>{{ 'Attachments'|trans }}</button></li>
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='3'>{{ 'Import'|trans }}</button></li>
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='4'>{{ 'Export'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='5'>{{ 'Calendar feeds'|trans }}</button></li>
 </ul>
 
 {# loading spinner #}
@@ -300,5 +301,11 @@
       {% endfor %}
     </ul>
   </div>
+</div>
+
+{# TAB 5 CALENDAR FEEDS #}
+{% include 'calendar-modal.html' %}
+<div data-tabcontent='5' hidden>
+  {% include 'calendar-feeds.html' %}
 </div>
 {% endblock body %}
